<resources>
    <string name="app_name">Sustainify</string>
    <string name="welcome_to_sustainify">Welcome to Sustainify!</string>
    <string name="login">Login</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="sign_up_register">Sign up/ register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sustainify">SUSTAINIFY</string>
    <string name="login_as">Login as:</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="card_number">Card Number</string>
    <string name="card_cvc">Card CVC</string>
    <string name="billing_address">Billing Address</string>
    <string name="billing_address_question">Is billing address same as present address?</string>
    <string name="present_address">Present Address</string>
    <string name="sign_up">Sign Up</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
</resources>